# chains-tcg

./: .gitignore  .npmrc  README.md  index.html  package-lock.json  package.json  render.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
public/: booster-ticket.json  manifest.webmanifest  robots.txt  sitemap.xml  sproto-gremlin.json  sw.js
public/lore/: masterquest.md
scripts/: attach-sprotos-to-collection.mts  export-masterquest-lore.mts  inject-rpc.mjs  mint-sprotos.mts  render-cards.mjs
solana/: .gitignore  Anchor.toml  DEPLOY.md
solana/programs/master_wager/: Cargo.toml
solana/programs/master_wager/src/: lib.rs
solana/scripts/: gen-oracle.ts  initialize.ts
src/: App.tsx  Board.tsx  Boosters.tsx  BorderGlow.css  BorderGlow.tsx  CardPreview.tsx  Game.ts  Iridescence.css  Iridescence.tsx  Jitsi.tsx  Lightfall.css  Lightfall.tsx  PixelTrail.css  PixelTrail.tsx  Plaza.tsx  ShinyText.css  ShinyText.tsx  SideRays.css  SideRays.tsx  SoloClient.tsx  Voice.tsx  booster-mint.ts  boosters-api.ts  bot.ts  cards.test.ts  cards.ts  dailyChallenge.ts  db.ts  haptics.ts  index.tsx  nft-showcase.ts  profiles.ts  ranked-client.ts  server-custodial.ts  server-wager.ts  server.ts  wager-custodial.ts  wager-program.ts  wallet.ts
src/masterquest/: MasterquestPage.tsx  lore.test.ts  lore.ts  progress.ts
src/ranked/: anti-smurf.ts  api.ts  db.ts  glicko2.ts  index.ts  leaderboard-service.ts  matchmaker.ts  queue-service.ts  ranks.ts  rating-service.ts  replay-service.ts  season-service.ts  telemetry-service.ts  types.ts
