[package]
name = "master_wager"
version = "0.1.0"
description = "Memetic Masters $MASTER token escrow + settlement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "master_wager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
# Pin transitive deps below the edition2024 cliff (platform-tools rust 1.84.1 cannot parse edition2024 manifests).
indexmap = "=2.7.0"
hashbrown = "=0.15.2"
blake3 = "=1.7.0"
toml_edit = "=0.22.22"
toml = "=0.8.19"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

